fix(theme): missing padding when hero text is multiple-lined (close: #23)

--- a/packages/vuepress-theme-vt/styles/home.styl
+++ b/packages/vuepress-theme-vt/styles/home.styl
@@ -1,6 +1,7 @@
 #hero {
     p {
         margin: 0;
+        line-height: 1.25;
     }
 
     .heroText .gradient {
